  was immediately loaded and made visible when the plugin was loaded. Now, it
  uses lazy instantiation and only its anchor button is shown.

- Fixed a bug in OperatingSystem.getScreenBounds() (Matthieu Casanova)

- Fixed JVM detection that was broken with java 1.6 (Matthieu Casanova)

- Fixed a NPE in Buffer.setMode() if the defaultMode is null (Matthieu Casanova)
}}}
{{{ Miscellaneous

- Removed redundant TextArea:EditPane map in EditPane.java in favor of a linear search through parent container linked list. (Alan Ezust)

- Applied patch #2296738: File/Directory properties dialog for VFS browser.
  The context menu of the VFS browser now has a "Properties" menu item that
  shows the properties of the selected node(s) in a dialog.

}}}
{{{ API Changes

- The keybindings are reloaded when the properties are changed in the standalone
  textarea, and the StandaloneActionSet now takes an url to the actions.xml
  as constructor parameter (patch #2304608) (Dakshinamurthy Karra)

- Added jEdit.openFile(EditPane, ....) methods to explicitely choose an editPane
  to open a file (Matthieu Casanova)

- Added jEdit.newFile(EditPane, ...) methods to explicitely choose an EditPane
  to create a new file (Matthieu Casanova)

- Added org.gjt.sp.jedit.menu.MenuItemTextComparator as the preferred
  alternative for deprecated MiscUtilities.MenuItemCompare.
  (Eric Berry - SF.net patch #2308329)

- Removed BufferSet#getScope(). The scope of bufferset is a property of
  EditPane. Added EditPane#getBufferSetScope() and setBufferSetScope().
  Also removed EditPane#setBufferSet(), which was the way to set the
  scope of buffer set. (Kazutoshi Satoda)

- Moved access methods for BufferSet instances to be more straightforward.
    - jEdit.getBufferSetManager().getGlobalBufferSet()
      -> jEdit.getGlobalBufferSet()
    - jEdit.getViewBufferSet(view)
      -> view.getLocalBufferSet()
    - jEdit.getEditPaneBufferSet(editPane) /* this might be unused one */